projects/vb6parse/snapshots/tests/invalid_syntax/invalid_control_flow/stop_with_arguments_cst.snap
---
source: projects/vb6parse/tests/invalid_syntax/invalid_control_flow.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: StopStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: StopKeyword
                  text: Stop
                - kind: Whitespace
                  text: " "
            - kind: ErrorRecovery
              children:
                - kind: ErrorExpectedTokens
                  text: statement
                - kind: IntegerLiteral
                  text: "123"
            - kind: Newline
              text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
